fix: corregir overflow en titulo / style: añadir padding a popups

--- a/Blocks/popup.css
+++ b/Blocks/popup.css
@@ -110,6 +110,10 @@
 }
 
 .popup__container {
+  padding: 36px;
+}
+
+.popup__container_image {
   padding: 0;
 }
 
